--- a/Views/Components/ChatReportComponent.xaml
+++ b/Views/Components/ChatReportComponent.xaml
@@ -30,6 +30,7 @@
                         Padding="20,10"
                         Background="#539BF5"
                         FontWeight="Bold"
+                        Width="150"
                         BorderBrush="Transparent"
                         HorizontalAlignment="Stretch">
                         <Button.Style>
@@ -41,7 +42,9 @@
                     <Button Content="Close report" Click="DoNotPunishReportedUser" 
                             Margin="0,0,10,5" 
                             Padding="20,10"
-                            Background="#e9f4f8"
+                            Width="150"
+                            Background="AliceBlue"
+                            Foreground="Black"
                             FontWeight="Bold"
                             BorderBrush="Black"
                             HorizontalAlignment="Stretch">
