--- a/Views/Components/MessageHistoryComponent.xaml
+++ b/Views/Components/MessageHistoryComponent.xaml
@@ -6,8 +6,7 @@
    xmlns:local="using:StockApp.Views.Components"  
    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"  
    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"  
-   mc:Ignorable="d"  
-   Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">  
+   mc:Ignorable="d">  
 
    <Grid>  
        <StackPanel HorizontalAlignment="Left" VerticalAlignment="Center">  
