--- a/Views/AdminNewsControlView.xaml
+++ b/Views/AdminNewsControlView.xaml
@@ -5,7 +5,7 @@
     xmlns:local="using:StockApp.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:converters="using:StockApp.Views.Converters" xmlns:models="using:StockApp.Models"
-    mc:Ignorable="d"
+    mc:Ignorable="d" x:Name="AdminPage"
     DataContext="{Binding ViewModel, RelativeSource={RelativeSource Self}}">
 
     <Page.Resources>
@@ -56,7 +56,7 @@
                       SelectionMode="Single"
                       SelectedItem="{Binding SelectedArticle, Mode=TwoWay}">
                 <ListView.ItemTemplate>
-                    <DataTemplate x:DataType="models:UserArticle">
+                    <DataTemplate x:DataType="models:NewsArticle">
                         <Grid Padding="12" Background="{ThemeResource CardBackgroundFillColorDefaultBrush}" 
                               BorderBrush="{ThemeResource CardStrokeColorDefaultBrush}" 
                               BorderThickness="1" CornerRadius="8" Margin="0,0,0,8">
@@ -74,7 +74,7 @@
                             <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Horizontal" Spacing="8">
                                 <TextBlock Text="{x:Bind Author}" Opacity="0.7" FontSize="12"/>
                                 <TextBlock Text="•" Opacity="0.7" FontSize="12"/>
-                                <TextBlock Text="{x:Bind SubmissionDate, Converter={StaticResource DateTimeToStringConverter}}" Opacity="0.7" FontSize="12"/>
+                                <TextBlock Text="{x:Bind PublishedDate, Converter={StaticResource DateTimeToStringConverter}}" Opacity="0.7" FontSize="12"/>
                                 <TextBlock Text="•" Opacity="0.7" FontSize="12"/>
                                 <TextBlock Text="{x:Bind Topic}" Opacity="0.7" FontSize="12"/>
 
