add statefull visibility navigation based on login and acl state, fix subscriptions to login and logout events and add log out button

--- a/StockApp/MainWindow.xaml
+++ b/StockApp/MainWindow.xaml
@@ -8,7 +8,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     Title="StockApp">
-    
+
     <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
             <Grid.ColumnDefinitions>
@@ -22,19 +22,19 @@
             <NavigationView PaneDisplayMode="Top" SelectionChanged="NavigationView_SelectionChanged" IsSettingsVisible="False" IsBackButtonVisible="Collapsed" Grid.Column="0" Grid.Row="0">
                <NavigationView.MenuItems>
                     <NavigationViewItem Content="Home" Tag="HomePage"/>
-                    <NavigationViewItem Content="Users" Tag="UsersList"/>
-                    <NavigationViewItem Content="Chat reports" Tag="ChatReports"/>
-                    <NavigationViewItem Content="Loan requests" Tag="LoanRequest"/>
-                    <NavigationViewItem Content="Loans" Tag="Loans"/>
-                    <NavigationViewItem Content="BillSplit reports" Tag="BillSplitReports"/>
-                    <NavigationViewItem Content="Investments" Tag="Investments"/>
+                    <NavigationViewItem Content="Users" Tag="UsersList" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Chat reports" Tag="ChatReports" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Loan requests" Tag="LoanRequest" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Loans" Tag="Loans" Visibility="{Binding IsAuthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="BillSplit reports" Tag="BillSplitReports" Visibility="{Binding IsAuthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Investments" Tag="Investments" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
                     <NavigationViewItem Content="News" Tag="NewsListPage"/>
-                    <NavigationViewItem Content="Create Stock" Tag="CreateStockPage"/>
-                    <NavigationViewItem Content="History" Tag="TransactionLogPage"/>
-                    <NavigationViewItem Content="Store" Tag="GemStoreWindow"/>
-                    <NavigationViewItem Content="Log in" Tag="LoginPage" Visibility="{Binding LoginButtonVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                    <NavigationViewItem Content="Profile" Tag="ProfilePage" Visibility="{Binding ProfileButtonVisibility, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-               </NavigationView.MenuItems>
+                    <NavigationViewItem Content="Create Stock" Tag="CreateStockPage" Visibility="{Binding IsAdmin, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="History" Tag="TransactionLogPage" Visibility="{Binding IsAuthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Store" Tag="GemStoreWindow" Visibility="{Binding IsAuthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Log in" Tag="LoginPage" Visibility="{Binding IsUnauthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                    <NavigationViewItem Content="Profile" Tag="ProfilePage" Visibility="{Binding IsAuthenticated, Converter={StaticResource BoolToVisibilityConverter}, Mode=OneWay}"/>
+                </NavigationView.MenuItems>
             </NavigationView>
 
 
