--- a/StockAppWeb/Views/LoanRequest/Index.cshtml
+++ b/StockAppWeb/Views/LoanRequest/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model StockAppWeb.Views.LoanRequest.IndexModel
+﻿@model StockAppWeb.Views.LoanRequest.IndexModel
 @{
     ViewData["Title"] = "Loan Requests";
 }
