--- a/StockAppWeb/Views/Loans/Create.cshtml
+++ b/StockAppWeb/Views/Loans/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model StockAppWeb.Views.LoanRequest.CreateModel
+﻿@model StockAppWeb.Views.Loans.CreateModel
 @{
     ViewData["Title"] = "Create Loan Request";
 }
