--- a/StockAppWeb/Views/Shared/_Layout.cshtml
+++ b/StockAppWeb/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Loans" asp-action="Index">Loans</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="CreateStock" asp-action="Index">Create Stock</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TransactionLog" asp-action="Index">Transaction Log</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
