Ported AnalyisisWindow and TipsHistoryWindow

--- a/StockAppWeb/Views/Shared/_Layout.cshtml
+++ b/StockAppWeb/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Loans" asp-action="Index">Loans</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Analysis/Index">Analysis</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-page="/Tips/Index">Tips</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
