--- a/StockApp/Views/Components/ChatReportComponent.xaml
+++ b/StockApp/Views/Components/ChatReportComponent.xaml
@@ -16,16 +16,25 @@
                     <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
 
-                <StackPanel Orientation="Vertical" VerticalAlignment="Center"  Grid.Column="0">
+                <StackPanel Orientation="Vertical" VerticalAlignment="Center" Grid.Column="0">
                     <TextBlock x:Name="IdTextBlock" FontSize="14" FontWeight="Bold" Margin="0,0,0,10"/>
                     <TextBlock x:Name="ReportedUserCNPTextBlock" FontSize="18" FontWeight="Bold" Margin="0,0,0,10"/>
                     <TextBlock x:Name="ReportedMessageTextBlock" FontSize="14" Margin="0,0,0,20" FontWeight="Bold"/>
-                    <TextBlock x:Name="ApiSuggestionTextBlock" FontSize="14"  Margin="0,0,0,20"
+                    <TextBlock x:Name="ApiSuggestionTextBlock" FontSize="14" Margin="0,0,0,20"
                                Foreground="{Binding Text, ElementName=ApiSuggestionTextBlock, Converter={StaticResource MessageSuggestionConverter}}"/>
+
+                    <!-- Message section -->
+                    <CheckBox x:Name="MessageCheckBox" Content="Send message to user" 
+                              IsChecked="False" Margin="0,0,0,10" 
+                              Checked="MessageCheckBox_Checked" 
+                              Unchecked="MessageCheckBox_Unchecked"/>
+                    <TextBox x:Name="MessageTextBox" PlaceholderText="Enter message to send to the user..." 
+                             TextWrapping="Wrap" MinHeight="60" MaxHeight="100" Margin="0,0,0,20" 
+                             IsEnabled="{Binding IsChecked, ElementName=MessageCheckBox}"/>
                 </StackPanel>
 
-                <StackPanel Orientation="Vertical" VerticalAlignment="Center"  Grid.Column="1">
-                    <Button Content="Punish reported user"  Click="PunishReportedUser"
+                <StackPanel Orientation="Vertical" VerticalAlignment="Center" Grid.Column="1">
+                    <Button Content="Punish reported user" Click="PunishReportedUser"
                         Margin="0,0,5,10"
                         Padding="20,10"
                         Background="#539BF5"
