make Home redirect to correct page, implement Loan creation on StockApp

--- a/StockAppWeb/Views/Loans/Index.cshtml
+++ b/StockAppWeb/Views/Loans/Index.cshtml
@@ -49,11 +49,14 @@ else
                     <td>@loan.MonthlyPaymentsCompleted</td>
                     <td>@loan.RepaidAmount</td>
                     <td>
+                        @if(loan.CanPay)
+                        {
                         <form method="post">
                             <input type="hidden" name="loanId" value="@loan.Id" />
                             <input type="hidden" name="penalty" value="@loan.Penalty" />
                             <button type="submit" class="btn btn-primary">Make Payment</button>
                         </form>
+                        }
                     </td>
                 </tr>
             }
