--- a/StockApp/Views/Pages/LoansView.xaml
+++ b/StockApp/Views/Pages/LoansView.xaml
@@ -11,15 +11,30 @@
    mc:Ignorable="d">
  <Grid Padding="20">
      <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" VerticalAlignment="Top">
-         <StackPanel Orientation="Horizontal">
-             <TextBlock Text="Loan Requests" FontSize="24" FontWeight="Bold" Margin="0,0,0,20"/>
-             <Button
-                 Content="Refresh"
-                 Command="{Binding LoadLoansCommand}"
-                 HorizontalAlignment="Right"
-                 VerticalAlignment="Top"
-                 Margin="10,0,0,0"/>
-         </StackPanel>
+         <Grid>
+             <Grid.ColumnDefinitions>
+                 <ColumnDefinition Width="Auto" />
+                 <ColumnDefinition Width="*" />
+                 <ColumnDefinition Width="Auto" />
+             </Grid.ColumnDefinitions>
+             
+             <TextBlock Text="Loan Requests" FontSize="24" FontWeight="Bold" Margin="0,0,0,20" Grid.Column="0"/>
+             
+             <StackPanel Orientation="Horizontal" Grid.Column="2" HorizontalAlignment="Right">
+                 <Button
+                     Content="Request a New Loan"
+                     Command="{Binding ShowCreateLoanDialogCommand}"
+                     HorizontalAlignment="Right"
+                     VerticalAlignment="Top"
+                     Background="#539BF5"
+                     Margin="0,0,10,0"/>
+                 <Button
+                     Content="Refresh"
+                     Command="{Binding LoadLoansCommand}"
+                     HorizontalAlignment="Right"
+                     VerticalAlignment="Top"/>
+             </StackPanel>
+         </Grid>
 
          <ItemsControl ItemsSource="{Binding Loans, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch">
              <ItemsControl.ItemsPanel>
@@ -40,6 +55,11 @@
                  </Style>
              </ItemsControl.ItemContainerStyle>
          </ItemsControl>
+         
+         <TextBlock x:Name="NoLoansMessage"
+                   Text="No loans found." 
+                   Visibility="Collapsed"
+                   Margin="0,20,0,0"/>
      </StackPanel>
  </Grid>
 </Page>
