--- a/StockAppWeb/Views/Auth/AccessDenied.cshtml
+++ b/StockAppWeb/Views/Auth/AccessDenied.cshtml
@@ -8,6 +8,6 @@
     <hr />
     <p>Please contact an administrator if you believe this is an error.</p>
     <div class="mt-4">
-        <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Return to Home</a>
+        <a class="btn btn-primary" asp-controller="Homepage" asp-action="Index">Return to Home</a>
     </div>
 </div>
