--- a/StockAppWeb/Views/Shared/_Layout.cshtml
+++ b/StockAppWeb/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Loans" asp-action="Index">Loans</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Alerts" asp-action="Index">Alerts</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-page="/Analysis/Index">Analysis</a>
                         </li>
                         <li class="nav-item">
